fix for bug #379738:  Error "entry point GetLongPathNameA could not be located" under NT 4.0 starting Firefox 2.0.0.4 RC1

r=bsmedberg, a=juan for the branch.